# ai-assessment-platform-Hexaware-

./: README.md
app/: .env  config.py  database.py  main.py  test.py
app/admin/: routes.py
app/auth/: models.py  routes.py  schemas.py  utils.py
app/candidate/: models.py  routes.py  schemas.py
app/educator/: models.py  routes.py  schemas.py
app/exam/: models.py  routes.py
app/password/: routes.py
app/proctoring/: routes.py
app/user/: routes.py
backend/: pyproject.toml
backend/app/: .env  auth.py  config.py  database.py  main.py  models.py  routes.py  schemas.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: layout.js  layout.tsx
frontend/app/api/auth/login/: route.ts
frontend/app/api/auth/register/: route.ts
frontend/app/api/roles/: route.ts
frontend/app/components/: AuthButton.tsx  InputField.tsx
frontend/app/home/: page.html  page.tsx
frontend/app/login/: page.js
frontend/app/login/admin/: page.tsx
frontend/app/login/candidate/: page.tsx
frontend/app/login/educator/: page.tsx
